# stairlight

./: .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml  sample.py
.github/workflows/: ci.yml
.github/workflows/composite/setup/: action.yml
.github/workflows/composite/setup-gcp/: action.yml
.github/workflows/composite/setup-stairlight/: action.yml
config/: lddr.yaml  mapping.yaml  mapping_no_metadata.yaml  msb.yaml  sql.yaml  sqlpath.yaml  stairlight.yaml  stairlight_no_exclude.yaml  stairlight_redash.yaml
lddr/: __init__.py  entrypoint.py  query_parser.py
msb/: __init__.py  entrypoint.py  query_parser.py
msby/: query.py
scripts/: setup_test.py
src/: main.py
src/stairlight/: __init__.py  __main__.py  cli.py  config.py  config_key.py  configurator.py  key.py  map.py  map_key.py  query.py  stairlight.py  template.py  util.py
src/stairlight/cli/: main.py
src/stairlight/source/: base.py  config.py  config_key.py  controller.py  dbt.py  file.py  fs.py  gcs.py  redash.py  template.py
src/stairlight/source/dbt/: config.py  template.py
src/stairlight/source/file/: config.py  template.py
src/stairlight/source/gcs/: config.py  map.py  template.py
src/stairlight/source/redash/: config.py  template.py
src/stairlight/source/redash/sql/: redash_queries.sql
src/stairlight/source/s3/: config.py  map.py  template.py
src/stairlight/source/sql/: redash_queries.sql
stairlight/: __init__.py  config.py  entrypoint.py  map.py  query.py  query_parser.py  strl.py  template.py
tests/: conftest.py  test_config.py  test_entry_point.py  test_map.py  test_query.py  test_query_parser.py  test_stairlight.py  test_strl.py  test_template.py
tests/cli/: test_main.py
tests/config/: mapping.yaml  mapping_checked_20220308144030.yaml  mapping_dbt.yaml  mapping_file.yaml  mapping_gcs.yaml  mapping_redash.yaml  stairlight.yaml  stairlight_dbt.yaml  stairlight_file.yaml  stairlight_no_exclude.yaml  stairlight_redash.yaml
tests/config/file_storage/: mapping_file.yaml  mapping_single.yaml
tests/config/object_storage/: mapping_s3.yaml
tests/config/test_check/: stairlight.yaml
tests/config/test_check_no_file_found/: stairlight.yaml
tests/config/test_key_not_found/: stairlight.yaml
tests/dbt/: profiles.yml
tests/dbt/project_01/: dbt_project.yml
tests/dbt/project_01/models/a/: example_a.sql
tests/dbt/project_01/models/b/: example_b.sql
tests/dbt/project_02/: dbt_project.yml
tests/dbt/project_02/models_a/a/: example_a.sql
tests/dbt/project_02/models_a/example/: my_first_dbt_model.sql
tests/dbt/project_02/models_b/b/: example_b.sql
tests/expected/: file_01.json  file_02.json  gcs.json  merged.json
tests/results/: file.json  file_01.json  file_02.json  gcs.json  merged.json
tests/sql/: backtick_each_elements.sql  backtick_whole_element.sql  cte_multi_line.sql  cte_multi_line_identifiers.sql  cte_multi_line_params.sql  cte_multi_line_params_copy.sql  cte_multi_tables_01.sql  cte_multi_tables_02.sql  extract_date_from_timestamp.sql  one_line_2.sql  one_line_no_project.sql  params_with_default_value.sql  test_c.sql
tests/sql/b/: test_b.sql
tests/sql/gcs/cte/: cte_multi_line.sql
tests/sql/gcs/one_line/: one_line.sql
tests/sql/main/: cte_multi_line.sql  test_d.sql  test_f.sql
tests/sql/query/: contains_str_from.sql  cte_multi_line.sql  cte_one_line.sql  google_bigquery_unnest_in_exists.sql  nested_join.sql  union_same_table.sql
tests/stairlight/: test_cli.py  test_config.py  test_configurator.py  test_map.py  test_query.py  test_stairlight.py  test_template.py  test_util.py
tests/stairlight/source/: test_base.py  test_config.py  test_controller.py  test_dbt.py  test_file.py  test_gcs.py  test_redash.py
tests/stairlight/source/dbt/: test_template.py
tests/stairlight/source/file/: test_template.py
tests/stairlight/source/gcs/: test_map.py  test_template.py
tests/stairlight/source/redash/: test_template.py
tests/stairlight/source/s3/: test_map.py  test_template.py
